--- a/ansible/playbook/templates/vector.service.j2
+++ b/ansible/playbook/templates/vector.service.j2
@@ -3,9 +3,9 @@ Description=Vector service
 After=network.target
 Requires=network-online.target
 [Service]
-User={{ ansible_user_uid }}
+User={{ ansible_user_id }}
 Group={{ ansible_user_gid }}
-ExecStart=/usr/bin/vector --config-yaml vector.yml --watch-config true
+ExecStart=/usr/bin/vector --config-yaml /home/ansible/vector.yml --watch-config
 Restart=always
 [Install]
 WantedBy=multi-user.target
