--- a/ansible/playbook/templates/nginx.conf.j2
+++ b/ansible/playbook/templates/nginx.conf.j2
@@ -35,7 +35,7 @@ http {
         listen       80;
         listen       [::]:80;
         server_name  _;
-        root        /usr/share/nginx/lighthouse;
+        root        {{ lighthouse_dest }};
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
